<resources>
    <string name="app_name">USSD Support</string>
    <string name="active">Faollashtirish</string>
    <string name="uz_qabul_title">"Qabul qilingan qo\'ng\'iroq" va "Tarmoqda"</string>
    <string name="uz_qabul_text">Endi Uzmobile GSM abonentlari "Qabul qilingan qo\'ng\'iroq" xizmati orqali telefoni o\'chiq bo\'lganda yoki tarmoqdan tashqari bo\'lgan hollarda qabul qilinmagan qo\'ng\'iroqlar haqida ma\'lumotlarga
        ega bo\'lishlari mumkin\nXizmat abonent to\'lovi 40 so\'m kuniga\n\nFaollashtirish - *111*2*4*1#\nXizmatni o\'chirish - *111*2*4*2#</string>
    <string name="uz_tungi_title">Tungi qo\'ng\'iroqlar</string>
    <string name="uz_tungi_text">Xizmatni faollashtirgandan keyin, tarmoq ichida qo\'ng\'iroqlar, shuningdek, "O\'zbektelekom" va uning filiallari liniyalarida qayd etilgan raqamlarga chiquvchi qo\'ng\'iroqlar (xizmat amal qilish davrida) narxlanmaydi.
        Xizmatni amal qilish davri: har kuni soat 22:00 dan 07:00 gacha.\nFaollashtirish narxi (bir martalik to\'lov) 420 so\'m.\nAbonent to\'lovi kuniga 42 so\'m\n\nO\'chirish - *111*1*16*2#\nHolatni bilish - *111*1*16*3#</string>
    <string name="uz_oila_title">"Oila uchun" xizmati</string>
    <string name="uz_oila_text">"Oila uchun" xizmati guruhi ichida cheklanmagan ovozli trafik\nNarxi 210 so\'m\nAmal qilish muddati kalendar o\'yin\nFaollashtirish - *111*1*17*1*1#\nXizmatni o\'chirish - *111*1*17*1*2#</string>
    <string name="uz_limitsiz_title">"Limitsiz ovoz" xizmati</string>
    <string name="uz_limitsiz_text">"Limitsiz ovoz" xizmati abonentlarga GSM va CDMA tarmoqlari ichida bepul qo\'ng\'iroqlarni amalga oshirish imkonini beradi.\nNarxi 210 so\'m kuniga\n\nFaollashtirish - *111*2*15*1#\nXizmatlarni o\'chirish - *111*2*15*2#</string>
    <string name="uz_chaqiriq_title">Chaqiriqni kutish va ushlab turish</string>
    <string name="uz_chaqiriq_text">Suhbatlar mobaynida javob berish jarayonida boshqa abonent kirish qo\'ng\'iroqlari (yoki qo\'ng\'iroq qilgan boshqa abonent) chaqiriqni kutish rejimi imkonini beradi
        va kirish chaqiriqlarini mazkur joriy suhbat tugaguniga qadar ushlab turadi, ya\'ni navbatma-navbat 2 abonent bilan suhbatlashadi.\nXizmatni o\'chirish kodi - #43#</string>
    <string name="uz_jarima_yxq_title">YHQ jarimalari haqida xabar</string>
    <string name="uz_jarima_yxq_text">Xizmatni boshqarish:\nO\'z YHQ buzilishlari haqida xabar olish uchun quyidagi axborot bilan bepul SMS jo\'natish zarur:
8860 raqamiga «avtomobilning davlat raqami oрaliq bo\'sh joy qoldirish tex. pasport seriyasi va raqami» (Masalan: 01R999XY AAC5447770)..\nYHQ buzilishi haqidagi 1 SMS narxi - 210,52 so\'m\nYHQ buzilishi mavjud emasligi haqidagi 1 SMS narxi 84,21 so\'m</string>
    <string name="uz_yashirin_title">"Yashirin qo'ng'iroq"</string>
    <string name="uz_yashirin_text">Mazkur xizmat abonentlarga o\'z telefon raqamlarini  yashirishga ruhsat beradi. Qo\'ng\'iroq qabul qilayotgan abonentning telefon raqamini ko\'ra olmaydi.\n\nXizmat Prepaid tizimidagi abonentlariga
        abonent to\'lovisiz amal qiladi, hamda xizmat maxsus ulanishni talab qilmaydi.\n\nShartlar:\n\n1.Mazkur xizmatlardan foydalanish uchun qo\'ng\'iroq amalga oshirilganda, terilayotgan raqamdan avval "#" belgisini qo\\yish va
        raqamni xalqaro formatda kiritish kerak: #99899XXXXXXX. Qo\'ng\'iroqlarni yashirin holda amalga oshiriladi.\n2."Yashirin qo\'ng\'iroq" xizmati orqali qo\'ng\'iroqni amalga oshirish narxi -210,52 so\'m.\n3."Yashirin qo\'ng\'iroq" xizmatidan foydalanilganda,
    "Shaxsiy raqam uzatilishini taqiqlash" xizmati yoqilgan bo\'lsa ham, xizmat uchun abonent hisobidan 210,52 so\'m yechiladi..</string>
    <string name="uz_restart_title">"Restart" xizmati</string>
    <string name="uz_restart_text">"Restart" xizmatining muvaffaqiyatli faollashtirilganda Street, Flash va Royal ta\'riflar tizimlaridagi abonentlar oylik davrning istalgan kunida bir oylik limitlarni olishadi,
        bunda oylik abonent to\'lovining yechilish muddati yangilanadi.\n\nXizmatni yoqish - *555#</string>
    <string name="uz_transfermoney_title">Tezkor o‘tkazmalar</string>
    <string name="uz_transfermoney_text">“Tezkor o‘tkazmalar” xizmati UZTELECOM abonentlari o‘rtasida pul o‘tkazmalarini amalga oshirishga yordam beradi. Pul o‘tkazish SMS va USSD orqali amalga oshiriladi. \nMuvafaqqiyatli pul o‘tkazmasi uchun xizmat narxi - 160 so\'m</string>
    <string name="mo_antiaon_title">AntiAON</string>
    <string name="mo_antiaon_text">Raqamni aniqlashga qarshilik xizmati imkonini beradi, abonentga istalgan Mobiuz abonenti telefon raqamiga chiquvchi qongiroqlarda oz tеlеfon raqamini aniqlashni taqiqlash yoki ruxsat berish imkonini beradi.
        \nAbonent tolovi- 421,03 som kuniga\n\n Xizmatni yoqish - *111*0101#\nXizmatni ochirish - *111*0100#</string>
    <string name="mo_callme_title">"Menga qo'ng'iroq qil"</string>
    <string name="mo_callme_text">"Ushbu xizmat UZB va MTS-Rossiya abonentlariga ular qo’ng’iroq qilishlarini iltimos qilib, tez va oson so’rov yuborish imkonini beradi.\n
    So’rov yuborish uchun, quyidagi buyruqlarni terish kerak:\n*110*abonentning xalqaro formatdagi raqami# (UZB abonentlariga)\n*110*7ХХХХХХХХХХ# (MTS-Rossiya abonentlariga)\n1 so’rovning narxi:\n42,10 so'm (UZBga), 210,52 so'm (MTS-Rossiyaga) ."</string>
    <string name="mo_missedcall_title">Sizga qo‘ng‘iroq qilishdi</string>
    <string name="mo_missedcall_text">"«Sizga qo‘ng‘iroq qilishdi!» —Mobiuz abonentiga telefoniga ulanish mumkin yoki hattoki o‘chrilgan vaqtda birorta ham chaqiriqni yo‘qotmaslik imkonini beruvchi qo‘shimcha aloqa xizmatidir. O‘tkazib yuborilgan chaqiriqlar
        haqida axborotni abonent 808 raqamidan SMS-xabarlar shaklida oladi.\nAbonent to‘lovi- 421,03 so'm kuniga\n\nXizmatni yoqish - *111*0131#"</string>
    <string name="mo_internet_yordamchi_title">"Internet - yordamchi"</string>
    <string name="mo_internet_yordamchi_text">"«Intеrnеt-yordamchi» — bu Sizning Intеrnеt yordamida shaxsiy ma’lumotlarni olish doimiy imkonini beruvchi shaxsiy kabinеtingizdir.
        «Intеrnеt-yordamchi» quyidagilarning imkonini beradi.\n
«Intеrnеt-yordamchi»ni https://ip.mobi.uz manzilidan olish mumkin."</string>
    <string name="mo_doimiyip_title">"Doimiy IP"</string>
    <string name="mo_doimiyip_text">"«Doimiy IP» xizmati yordamida korporativ mijozlar ichki korporativ servislardan, «UMS» MChJ tarmog’i ishlash doirasida doimiy IP-manzil orqali autentifikatsiya mexanizmlaridan foydalanuvchi dasturlardan masofadan turib foydalinish
        imkoniyatiga ega bo’ladi, mijozning tarmoqlari administratorlari esa lokal tarmoqlarda IP-manzil bo’yicha qo’shimcha avtorizatsiyani sozlashi mumkin bo’ladi.\nXizmatni ulash – 2105,18 so'm\nOylik abonent to’lovi – 6315,53 so'm
        \nXizmatni yoqish uchun yurudik shaxs vakili nomidan Mobiuz ofisiga yozma ariza berilishi lozim."</string>
    <string name="mo_chiquvchitaq_title">Chiquvchi qo‘ng‘iroqlarni taqiqlash</string>
    <string name="mo_chiquvchitaq_text">"Chiquvchi qo‘ng‘iroqlarni taqiqlash xizmati abonentga barcha chiquvchi qo‘ng‘iroqlarni taqiqlash imkonini beradi.\n\nXizmatni yoqish - *33*0000#\nXizmatni o‘chirish - #33*0000#"</string>
    <string name="mo_save_number_title">Raqamni saqlab turish</string>
    <string name="mo_save_number_text">«Raqamni saqlab turish» xizmati Mobiuz xizmatlaridan foydalanishni cheklash imkonini beradi. Bu muddat davomida tarif rejasi doirasida obuna to‘lovi, shuningdek boshqa davriy xizmatlar uchun haq undirilmaydi. Raqam bog‘lab qo‘yiladigan eng katta muddat 90 kunni tashkil qiladi.
    Xizmatni ulash — 0,00 so‘m\nObuna to‘lovi — kuniga 210,52  so‘m\n\nUSSD-buyruq — *111*0161#</string>
    <string name="mo_onceAntiaon_title">Bir martalik AntiAON</string>
    <string name="mo_onceAntiaon_text">«Bir martalik AntiAON» xizmati sizga chaqirilayotgan abonentga o‘z raqamingizni ko‘rsatmaslik imkonini beradi. Ushbu servis bir marta taqdim etiladi va buning uchun uni maxsus ulash shart emas. «Bir martalik AntiAON» xizmatidan foydalanish uchun chaqirilayotgan abonent raqamini terayotganingizda raqam oldiga «#» belgisini qo‘yishingiz kifoya.
\nMasalan: #99897*******\nRaqamni yashirgan holda bir marta qo‘ng‘iroq qilish narxi 210,52 so‘m</string>
    <string name="mo_changenum_title">Raqamni almashtirish</string>
    <string name="mo_changenum_text">"Raqamni almashtirish" xizmati abonentga abonentlik raqamini, SIM-kartani almashtirmasdan, eski raqamda oldinroq ulangan xizmatlar va amaldagi tarif rejasini saqlab qolgan holda almashtirish imkoniyatini taqdim qiladi. Xizmatdan yozma ariza asosida va faqat Mobiuz shaxsiy ofislarida, shaxsni tasdiqlovchi hujjatni taqdim qilgan holda foydalanish mumkin.\nXizmat narxi – 21 000 so\'m.</string>
    <string name="talim_title">Ta\'lim</string>
    <string name="talim_price">34 900 so\'m</string>
    <string name="talim_minute">300 DAQIQA</string>
    <string name="talim_internet">8 000 MB</string>
    <string name="talim_sms">500 SMS</string>
    <string name="street_title">Street</string>
    <string name="street_price">39 900 so\'m</string>
    <string name="street_minute">750 DAQIQA</string>
    <string name="street_internet">6 500 MB</string>
    <string name="street_sms">750 SMS</string>
    <string name="streetup_title">Street Upgrade</string>
    <string name="streetup_price">119 700 so\'m</string>
    <string name="streetup_minute">3 000 DAQIQA</string>
    <string name="streetup_internet">26 000 MB</string>
    <string name="streetup_sms">3 000 SMS</string>
    <string name="flash_title">Flash</string>
    <string name="flash_price">69 900 so\'m</string>
    <string name="flash_minute">1 500 DAQIQA</string>
    <string name="flash_internet">16 000 MB</string>
    <string name="flash_sms">1 500 SMS</string>
    <string name="flashup_title">Flash Upgrade</string>
    <string name="flashup_price">209 700 so\'m</string>
    <string name="flashup_minute">6 000 DAQIQA</string>
    <string name="flashup_internet">64 000 MB</string>
    <string name="flashup_sms">6 000 SMS</string>
    <string name="onlime_title">Onlime</string>
    <string name="onlime_price">49 900 so\'m</string>
    <string name="onlime_minute">1 000 DAQIQA</string>
    <string name="onlime_internet">10 000 MB</string>
    <string name="onlime_sms">1 000 SMS</string>
    <string name="royal_title">Royal</string>
    <string name="royal_price">149 900 so\'m</string>
    <string name="royal_minute">CHEKSIZ DAQIQA</string>
    <string name="royal_internet">CHEKSIZ MB</string>
    <string name="royal_sms">5 000 SMS</string>
    <string name="maktab_title">Maktab</string>
    <string name="maktab_price">29 900 so\'m</string>
    <string name="maktab_minute">200 DAQIQA</string>
    <string name="maktab_internet">5 000 MB</string>
    <string name="maktab_sms">500 SMS</string>
    <string name="ishbilarmon_title">Ishbilarmon</string>
    <string name="ishbilarmon_price">99 000 so\'m</string>
    <string name="ishbilarmon_minute">CHEKSIZ DAQIQA</string>
    <string name="ishbilarmon_internet">25 000 MB</string>
    <string name="ishbilarmon_sms">3 000 SMS</string>
    <string name="oddiy_title">Oddiy</string>
    <string name="oddiy_price">10 000 so\'m</string>
    <string name="oddiy_minute">10 DAQIQA</string>
    <string name="oddiy_internet">10 MB</string>
    <string name="oddiy_sms">10 SMS</string>
    <string name="bolajon_title">Bolajon</string>
    <string name="bolajon_price">18 000 so\'m</string>
    <string name="bolajon_minute">200 DAQIQA</string>
    <string name="bolajon_internet">0 MB</string>
    <string name="bolajon_sms">200 SMS</string>
    <string name="uzcard_title">Uzcard GSM</string>
    <string name="internet_packages">Internet to\'plamlari</string>
    <string name="tariffs">Tariflar</string>
    <string name="minute_and_sms">Daqiqa va SMS</string>
    <string name="useful">Foydali</string>
    <string name="services">Xizmatlar</string>
    <string name="balance">Balans</string>
</resources>